Explicitly set form.size to None

--- a/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
@@ -302,7 +302,7 @@
                 </td>
                 {% if is_multimedia_previewer %}
                     <td class="cell-vertical-centered">
-                        {% if form.size > 0 and form.app.id %}
+                        {% if form.size and form.app.id %}
                             <a href="{% url "form_multimedia_export" domain form.app.id %}?xmlns={{form.xmlns}}&{{ get_filter_params.urlencode|safe }}"
                                class="btn btn-primary dl-export" ><i
                                class="icon-download-alt icon-white"></i> {% trans "Download " %} <br> ({{form.size}})</a>
