Enable the submit button on choice field deletion

--- a/corehq/apps/custom_data_fields/templates/custom_data_fields/custom_data_fields.html
+++ b/corehq/apps/custom_data_fields/templates/custom_data_fields/custom_data_fields.html
@@ -19,9 +19,9 @@
         ko.applyBindings(customDataFieldsModel, $('#custom-fields-form').get(0));
 
         $('form[id="custom-fields-form"]').on("change", null, null, function() {
-            $(":submit").prop("disabled", false);
+            $("#save-custom-fields").prop("disabled", false);
         }).on("input", null, null, function() {
-            $(":submit").prop("disabled", false);
+            $("#save-custom-fields").prop("disabled", false);
         })
 
         $('.modal-footer button').on("click", function() {
