changed right arrow to check

--- a/corehq/apps/app_manager/templates/app_manager/releases.html
+++ b/corehq/apps/app_manager/templates/app_manager/releases.html
@@ -255,7 +255,7 @@
                         <div data-bind="visible: editing_comment()">
                             <input type="text" data-bind="value: new_comment"></input>
                             <a href="#" data-bind="click: submit_new_comment, visible: !pending_comment_update()">
-                                <span class="icon-arrow-right"></span>
+                                <span class="icon-ok"></span>
                             </a>
                             <a href="#" data-bind="click: function () {editing_comment(false);}, visible: !pending_comment_update()">
                                 <span class="icon-remove"></span>
