move pencil and increase commit count

--- a/corehq/apps/app_manager/templates/app_manager/releases.html
+++ b/corehq/apps/app_manager/templates/app_manager/releases.html
@@ -247,7 +247,7 @@
                             <b data-bind="visible: comment_user_name, text: comment_user_name"></b>
                             <span data-bind="text: build_comment"></span>
                             <b data-bind="visible: !build_comment()">{% trans "(No Comment)" %}</b>
-                            <a class="edit-comment-pencil pull-right" href="#"
+                            <a class="edit-comment-pencil" href="#"
                                data-bind="click: function () {editing_comment(true);}">
                                 <span class="icon-pencil"></span>
                             </a>
