--- a/corehq/apps/app_manager/templates/app_manager/app_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/app_view.html
@@ -174,6 +174,12 @@
                 ga('send', 'event', 'App Builder', 'Manage Multimedia');
             }
         });
+
+        $('#download_zip').click(function() {
+            if(ga !== undefined) {
+                ga('send', 'event', 'App Builder', 'Download Multimedia');
+            }
+        });
     </script>
 {% endblock %}
 
