--- a/corehq/apps/domain/templates/domain/create_snapshot.html
+++ b/corehq/apps/domain/templates/domain/create_snapshot.html
@@ -108,11 +108,11 @@
             </div>
         </div>
         {% for app, app_form in app_forms %}
-            <h3>Application: {{ app.name }}</h3>
+        <h3>{% trans "Application" %}: {{ app.name }}</h3>
             {% bootstrap_fieldset app_form %}
         {% endfor %}
         {% for fixture, fixture_form in fixture_forms %}
-            <h3>Lookup Table: {{ fixture.tag }}</h3>
+            <h3>{% trans Lookup Table%}: {{ fixture.tag }}</h3>
             {% bootstrap_fieldset fixture_form %}
         {% endfor %}
         <input type="hidden" name="publish_on_submit" value="yes" id="id_publish_on_submit">
