--- a/corehq/apps/app_manager/templates/app_manager/form_view_base.html
+++ b/corehq/apps/app_manager/templates/app_manager/form_view_base.html
@@ -105,7 +105,11 @@
 {% block js-inline %}{{ block.super }}
     {% include "hqwebapp/ko/value-or-none-ui.html" %}
     {% if not is_user_registration %}
-    {% include "app_manager/partials/nav_menu_media_js.html" %}
+        {% if multimedia %}
+            {% include "app_manager/partials/nav_menu_media_js.html" %}
+        {% else %}
+            {% include "app_manager/partials/nav_menu_media_js.old.html" with item=form image_default="jr://file/commcare/image/form_name.png" audio_default="jr://file/commcare/audio/form_name.mp3" %}
+        {% endif %}
     {% endif %}
     <script>
         $(function(){
@@ -347,5 +351,7 @@
 {% endblock %}
 
 {% block modals %}{{ block.super }}
-{% include "app_manager/partials/nav_menu_media_modals.html" %}
+{% if multimedia %}
+    {% include "app_manager/partials/nav_menu_media_modals.html" %}
+{% endif %}
 {% endblock modals %}
