allow disabling editing a form in vellum
This is for forms that vellum breaks, so that we can block users from
mistakenly editing them in vellum.

This feature under is a toggle (/hq/flags/edit/no_vellum/),
and is basically intended to stay there indefinitely,
so that a Dimagi power-user can disable editing certain
forms and hide that option from others
(and their future selves if they wish).

The form can still be edited by choosing Advanced > Download,
editing by hand, and reuploading with Advanced > Upload.

--- a/corehq/apps/app_manager/templates/app_manager/managed_app.html
+++ b/corehq/apps/app_manager/templates/app_manager/managed_app.html
@@ -259,7 +259,7 @@
                                             {{ form.name|html_trans:langs }}
                                             </span>
                                         </a>
-                                        {% if edit %}
+                                        {% if edit and not form.no_vellum %}
                                             <div class="edit-form-pencil pull-right">
                                                 <a id="edit_pen_{{ module.id }}_{{ form.id }}" href="{% url "form_source" domain app.id module.id form.id %}">
                                                     <i class="icon-pencil" {% ifequal form selected_form %}style="color: white"{% endifequal %}"></i>
