--- a/corehq/apps/app_manager/templates/app_manager/form_view_base.html
+++ b/corehq/apps/app_manager/templates/app_manager/form_view_base.html
@@ -215,9 +215,7 @@
                 var cloudCareUrl = getCloudCareUrl("{% url "cloudcare_main" domain '' %}", "{{ app.id }}", "{{ module.id }}", "{{ nav_form.id }}") + "?preview=true";
                 $("#cloudcare-preview-url").attr("href", cloudCareUrl);
                 $('#cloudcare-preview-url').click(function(e) {
-                    if (typeof(ga) !== 'undefined') {
-                        ga('send', 'event', 'CloudCare', 'Click "Try in CloudCare"');
-                    }
+                    ga_track_event('CloudCare', 'Click "Try in CloudCare"');
                 });
             {% endif %}
         {% endif %}
