--- a/corehq/apps/app_manager/templates/app_manager/managed_app.html
+++ b/corehq/apps/app_manager/templates/app_manager/managed_app.html
@@ -116,32 +116,28 @@
             }, 0);
         });
     </script>
-    {% if GOOGLE_ANALYTICS_ID %}
-        <script>
-            $(document).ready(function() {
-                $('#edit_label').click(function () {
-                    event.preventDefault();
-                    ga('send', 'event', 'App Builder', 'Open Form', 'Edit Label', {
-                        'hitCallback': function () {
-                            document.location = $('#edit_label').attr('href');
-                        }
-                    });
+    <script>
+        $(document).ready(function() {
+            $('#edit_label').click(function () {
+                ga_track_event('App Builder', 'Open Form', 'Edit Label', {
+                    'hitCallback': function () {
+                        document.location = $('#edit_label').attr('href');
+                    }
                 });
-                {% for module in app.get_modules %}
-                    {% for form in module.get_forms %}
-                        $('#edit_pen_{{ module.id }}_{{ form.id }}').click(function() {
-                            event.preventDefault();
-                            ga('send', 'event', 'App Builder', 'Open Form', 'Edit Pen', {
-                                'hitCallback': function () {
-                                    document.location = $('#edit_pen_{{ module.id }}_{{ form.id }}').attr('href');
-                                }
-                            });
-                        });
-                    {% endfor %}
-                {% endfor %}
             });
-        </script>
-    {% endif %}
+            {% for module in app.get_modules %}
+                {% for form in module.get_forms %}
+                    $('#edit_pen_{{ module.id }}_{{ form.id }}').click(function() {
+                        ga_track_event('App Builder', 'Open Form', 'Edit Pen', {
+                            'hitCallback': function () {
+                                document.location = $('#edit_pen_{{ module.id }}_{{ form.id }}').attr('href');
+                            }
+                        });
+                    });
+                {% endfor %}
+            {% endfor %}
+        });
+    </script>
 {% endblock %}
 
 {% block breadcrumbs %}
