--- a/corehq/apps/app_manager/templates/app_manager/releases.html
+++ b/corehq/apps/app_manager/templates/app_manager/releases.html
@@ -61,23 +61,15 @@
 </script>
 <script>
     function track_deploy_type(type) {
-        if (ga !== undefined) {
-            ga('send', 'event', 'App Manager', 'Deploy Type', type);
-        }
+        ga_track_event('App Manager', 'Deploy Type', type);
     }
 
     function track_deploy_type_and_redirect(type, href) {
-        {% if GOOGLE_ANALYTICS_ID %}
-            if (ga !== undefined) {
-                ga('send', 'event', 'App Manager', 'Deploy Type', type, {
-                    'hitCallback': function () {
-                        document.location = href;
-                    }
-                });
+        return ! ga_track_event('App Manager', 'Deploy Type', type, {
+            'hitCallback': function () {
+                document.location = href;
             }
-        {% else %}
-            return true;
-        {% endif %}
+        });
     }
 </script>
 {% endblock %}
@@ -226,7 +218,7 @@
                             <a class="btn" data-bind="
                                 openModal: 'deploy-build-modal-template',
                                 css: {'btn-primary': !build_broken(), 'btn-danger': build_broken},
-                                click: function() { if (ga !== undefined) { ga('send', 'event', 'App Manager', 'Deploy Button', '{{ app.id }}'); } }
+                                click: function() { ga_track_event('App Manager', 'Deploy Button', '{{ app.id }}'); }
                             ">
                                 <span class="icon icon-exclamation-sign" data-bind="visible: build_broken"></span>
                                 {% trans "Deploy" %}
