--- a/corehq/apps/appstore/templates/appstore/project_info.html
+++ b/corehq/apps/appstore/templates/appstore/project_info.html
@@ -70,15 +70,11 @@
         });
 
         $('#download-new-project').click(function() {
-            if (typeof(ga) !== 'undefined') {
-                ga('send', 'event', 'Exchange', 'Download As New Project', '{{ project }}');
-            }
+            ga_track_event('Exchange', 'Download As New Project', '{{ project }}');
         });
 
         $('#import-app-button').click(function() {
-            if (typeof(ga) !== 'undefined') {
-                ga('send', 'event', 'Exchange', 'Download to Existing Project', '{{ project }}');
-            }
+            ga_track_event('Exchange', 'Download to Existing Project', '{{ project }}');
         });
     </script>
 {% endblock %}
