--- a/corehq/apps/domain/templates/domain/partials/project_version_display.html
+++ b/corehq/apps/domain/templates/domain/partials/project_version_display.html
@@ -19,7 +19,7 @@
                    data-action="{% url "domain_set_published" domain version.name %}"
                    data-toggle="modal" data-target="#contentDistributionAgreement"
                    href="#contentDistributionAgreement"
-                   onclick="ga('send', 'event', 'Exchange', 'Publish Most Recent', '{{ version.name }}');"
+                   onclick="ga_track_event('Exchange', 'Publish Most Recent', '{{ version.name }}');"
                 >
                     Publish
                 </a>
