--- a/corehq/apps/domain/templates/domain/snapshot_settings.html
+++ b/corehq/apps/domain/templates/domain/snapshot_settings.html
@@ -30,35 +30,27 @@
     </script>
     <script>
         function view_on_exchange(version_name) {
-            {% if GOOGLE_ANALYTICS_ID %}
-                event.preventDefault();
-                ga('send', 'event', 'Exchange', 'View on exchange', version_name, {
-                    'hitCallback': function () {
-                        document.location = $('#view-on-exchange').attr('href');
-                    }
-                });
-            {% else %}
-                return true;
-            {% endif %}
+            return ! ga_track_event('Exchange', 'View on exchange', version_name, {
+                'hitCallback': function () {
+                    document.location = $('#view-on-exchange').attr('href');
+                }
+            });
         }
 
-        {% if GOOGLE_ANALYTICS_ID %}
-            $(document).ready(function() {
-                {% for snapshot in snapshots %}
-                    $('#publish_{{ snapshot.name }}').click(function() {
-                        ga('send', 'event', 'Exchange', 'Publish Previous Version', '{{ snapshot.name }}');
+        $(document).ready(function() {
+            {% for snapshot in snapshots %}
+                $('#publish_{{ snapshot.name }}').click(function() {
+                    ga_track_event('Exchange', 'Publish Previous Version', '{{ snapshot.name }}');
+                });
+                $('#view_{{ snapshot.name }}').click(function() {
+                    ga_track_event('Exchange', 'View', '{{ snapshot.name }}', {
+                        'hitCallback': function () {
+                            document.location = $('#view_{{ snapshot.name }}').attr('href');
+                        }
                     });
-                    $('#view_{{ snapshot.name }}').click(function() {
-                        event.preventDefault();
-                        ga('send', 'event', 'Exchange', 'View', '{{ snapshot.name }}', {
-                            'hitCallback': function () {
-                                document.location = $('#view_{{ snapshot.name }}').attr('href');
-                            }
-                        });
-                    });
-                {% endfor %}
-            });
-        {% endif %}
+                });
+            {% endfor %}
+        });
     </script>
 {% endblock %}
 
