add error and result messages to soil status page

--- a/soil/templates/soil/file_download.html
+++ b/soil/templates/soil/file_download.html
@@ -9,9 +9,15 @@
         var pollDownloader = function () {
             if ($('#ready_{{ download_id }}').length == 0)
 	        {
-	            $.get("{% url 'ajax_job_poll' download_id %}", function(data) {
-	                $("#display_{{ download_id }}").html(data);
-	            });
+                $.ajax("{% url 'ajax_job_poll' download_id %}", {
+                    success: function(data) {
+                        $("#display_{{ download_id }}").html(data);
+                    },
+                    error: function(data) {
+                        $("#display_{{ download_id }}").html(data.responseText);
+                        clearInterval(autoRefresh);
+                    }
+                });
 	        } else {
 	            clearInterval(autoRefresh);
 	        }
