make a mock ga function when in dev mode
and remove the ga undefined check from ga_track_event

--- a/corehq/apps/domain/templates/domain/snapshot_settings.html
+++ b/corehq/apps/domain/templates/domain/snapshot_settings.html
@@ -30,11 +30,12 @@
     </script>
     <script>
         function view_on_exchange(version_name) {
-            return ! ga_track_event('Exchange', 'View on exchange', version_name, {
+            ga_track_event('Exchange', 'View on exchange', version_name, {
                 'hitCallback': function () {
                     document.location = $('#view-on-exchange').attr('href');
                 }
             });
+            return false;
         }
 
         $(document).ready(function() {
