--- a/corehq/apps/app_manager/templates/app_manager/releases.html
+++ b/corehq/apps/app_manager/templates/app_manager/releases.html
@@ -65,11 +65,12 @@
     }
 
     function track_deploy_type_and_redirect(type, href) {
-        return ! ga_track_event('App Manager', 'Deploy Type', type, {
+        ga_track_event('App Manager', 'Deploy Type', type, {
             'hitCallback': function () {
                 document.location = href;
             }
         });
+        return false;
     }
 </script>
 {% endblock %}
