--- a/corehq/apps/style/templates/style/includes/analytics_google.html
+++ b/corehq/apps/style/templates/style/includes/analytics_google.html
@@ -1,10 +1,23 @@
-{% if GOOGLE_ANALYTICS_ID %}
     <script>
+    {% if GOOGLE_ANALYTICS_ID %}
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
+    {% else %}
+        function ga() {
+            console.log('Called ga with arguments: ', arguments);
+            if (arguments.length) {
+                var lastArg = arguments[arguments.length - 1];
+                if (lastArg) {
+                    var callback = lastArg.hitCallback;
+                    if (callback) {
+                        callback();
+                    }
+                }
+            }
+        }
+    {% endif %}
         ga('create', '{{ GOOGLE_ANALYTICS_ID }}', {
             'userId': '{% if request.couch_user %}{{ request.couch_user.userID }}{% else %}none{% endif %}',
         });
@@ -25,17 +38,17 @@
     Returns true if the event is tracked, and false otherwise.
      */
     function ga_track_event() {
-        if(typeof ga !== 'undefined') {
-            var args = ['send', 'event'];
-            for(var i in arguments) {
-                args.push(arguments[i]);
-            }
-            if(arguments.length > 3 && arguments[3].hitCallback) {
-                event.preventDefault();
-            }
-            ga.apply(null, args);
-            return true;
+        var args = ['send', 'event'];
+        for(var i = 0; i < arguments.length; i++) {
+            args.push(arguments[i]);
         }
-        return false;
+        // check the last from the right
+        // rather than the 3rd or 4th from the left, because it's variable
+        // https://developers.google.com/analytics/devguides/collection/analyticsjs/events#overview
+        var lastArg = arguments[arguments.length - 1];
+        if (lastArg && lastArg.hitCallback) {
+            event.preventDefault();
+        }
+        ga.apply(null, args);
     }
 </script>
