Fix for incorrect calculations

--- a/custom/world_vision/templates/world_vision/multi_report.html
+++ b/custom/world_vision/templates/world_vision/multi_report.html
@@ -47,6 +47,7 @@
         .mother_report table, .child_report table {
             display: inline-block;
             float: left;
+            margin-bottom: 30px;
         }
 
         .mother_report .row ~ table, .child_report .row ~ table {
