--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_form_setting.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_form_setting.html
@@ -1,7 +1,7 @@
 {% load xforms_extras %}
 {% load hq_shared_tags %}
 {% load i18n %}
-{% if app.application_version == '2.0' %}
+{% if app.application_version == '2.0' and request|toggle_enabled:'DOUBLE_MANAGEMENT' %}
     <div class="control-group">
         <label class="control-label">
             {% trans "Registration Form Accessible from Case List" %}
