continue inverting case list/ui contorl
- moved sorting, filters, and parent selection into case list template
- moved tab into case detail template
- got all of them working on the top level call to applyBindings, and
  removed the individual applyBindings calls from deep within the js
  file

--- a/corehq/apps/app_manager/templates/app_manager/partials/detail_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/detail_properties.html
@@ -1,14 +1,15 @@
 {% load i18n %}
 {% load hq_shared_tags %}
 <div id="{{ detail.type }}-detail-screen-detail-config">
+    <div data-bind="saveButton: longScreen.saveButton, visible: $root.edit"></div>
     <legend>
         {% trans "Display Properties" %}
     </legend>
     <div data-bind="element: $detailHome"></div>
-    <div class="add-tab" data-bind="if: {{ request|toggle_enabled:"DETAIL_LIST_TABS"|BOOL }}">
-        <a href="#" data-bind="click: addTab">
+    {% if request|toggle_enabled:"DETAIL_LIST_TABS" %}
+        <a href="#" data-bind="click: longScreen.addTab">
             <i class="icon-plus"></i>
             Add a tab
         </a>
-    </div>
+    {% endif %}
 </div>
